// Vitest Snapshot v1

exports[`titresONF > teste la récupération des données pour l'ONF 1`] = `
{
  "dateCARM": "",
  "dateCompletudePTMG": "2022-03-10",
  "dateReceptionONF": "",
  "domaineId": "m",
  "enAttenteDeONF": true,
  "id": Any<String>,
  "nom": "titre1",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;

exports[`titresONF > teste la récupération des données pour l'ONF 2`] = `
{
  "dateCARM": "",
  "dateCompletudePTMG": "",
  "dateReceptionONF": "",
  "domaineId": "m",
  "enAttenteDeONF": false,
  "id": Any<String>,
  "nom": "titre2",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;

exports[`titresPTMG > teste la récupération des données pour le PTMG 1`] = `
{
  "domaineId": "m",
  "enAttenteDePTMG": false,
  "id": Any<String>,
  "nom": "titre1",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;

exports[`titresPTMG > teste la récupération des données pour le PTMG 2`] = `
{
  "domaineId": "m",
  "enAttenteDePTMG": true,
  "id": Any<String>,
  "nom": "titre2",
  "references": [
    {
      "nom": "ONF",
      "referenceTypeId": "onf",
    },
  ],
  "slug": Any<String>,
  "titreStatutId": "val",
  "titulaires": [
    {
      "adresse": null,
      "archive": false,
      "categorie": null,
      "cedex": null,
      "codePostal": null,
      "commune": null,
      "dateCreation": null,
      "email": null,
      "id": "plop",
      "legalEtranger": null,
      "legalForme": null,
      "legalSiren": null,
      "nom": "Mon Entreprise",
      "operateur": null,
      "paysId": null,
      "telephone": null,
      "url": null,
    },
  ],
}
`;
